# Server

./: .gitignore  README.md  pyproject.toml
Server/: requirements.txt  start.sh
Server/app/: __init__.py
Server/app/api/: __init__.py  api_key.py  event.py  team.py  user.py
Server/app/core/: api_key.py  db.py  mail.py  qr_code.py  settings.py
Server/app/crud/: api_key.py  event.py  team.py  user.py
Server/app/models/: __init__.py  api_key.py  event.py  team.py  user.py
Server/app/schemas/: event.py  team.py  user.py
