[tool.poetry]
name = "server"
version = "0.1.0"
description = "Mathtrix API Server"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.96.1"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.16"
yagmail = "^0.15.293"
qrcode = "^7.4.2"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
